# cat-lendar

./: .dockerignore  .env.example  .gitignore  AGENT.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/handlers/: message.py
app/models/: intent.py  user.py
app/routes/: notify.py  oauth.py  webhook.py
app/services/: auth.py  calendar.py  calendar_notify.py  line_messaging.py  local_calendar.py  nlp.py  notification.py
app/store/: encryption.py  firestore.py
app/utils/: datetime_utils.py  i18n.py
scripts/: deploy.sh  dev.sh  get_token.py  setup_gcp.sh  setup_scheduler.sh
tests/: test_api.py  test_calendar_create.py  test_calendar_notify.py  test_conversation_memory.py  test_datetime_utils.py  test_encryption.py  test_local_calendar.py  test_message_update.py  test_models.py  test_nlp_update.py  test_notification.py
